objects/Health_Safety_Audit__c.object
<CustomObject>
    <description>Health and Safety Custom Object to capture information specific to Health and Safety Cases</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Health_Safety</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Audit_Date__c</fullName>
        <label>Audit Date (Year)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audit_Status__c</fullName>
        <label>Audit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Admin Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Audit__c</fullName>
        <label>Audit</label>
        <picklist>
            <picklistValues>
                <fullName>Physical Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Assessment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Health_Safety</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charge_Date__c</fullName>
        <label>Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Health &amp; Safety Audits</relationshipLabel>
        <relationshipName>Health_Safety_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cycle__c</fullName>
        <label>Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>Cycle 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cycle 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cycle 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cycle 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seasonal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Gas_Reported__c</fullName>
        <label>Date Gas Reported</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expedia_Hotel_Id__c</fullName>
        <description>Used for creating new Audit records through integration.  This will associate the audit record with a hotel.  Not to be used for anything other that that.  Should not be visible on a layout</description>
        <label>Expedia Hotel Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fire_Score__c</fullName>
        <label>Fire Score</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gas_Safety_Source__c</fullName>
        <label>Gas Safety Source</label>
        <picklist>
            <picklistValues>
                <fullName>Infosheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email/Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Audit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gas__c</fullName>
        <label>Gas</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - Centralized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Gas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>H_S_Current_Status__c</fullName>
        <label>Health &amp; Safety Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Assessed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Self Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Physical Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Escalation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Escalation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipName>Health_Safety</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Group_Name__c</fullName>
        <label>Target Group Name</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria &amp; Switzerland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benelux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central/South America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece &amp; Turkey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Île-de-France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mainland Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nordic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NorthEast NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NorthEastern Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NorthWest NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seasonal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ski</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SouthEast NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SouthEastern Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SouthWest NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK &amp; Ireland</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Thing_Code__c</fullName>
        <description>Id field from Checkpoint system.  Used to update existing audits via integration</description>
        <label>Checkpoint Thing Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Buy In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Access</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Health &amp; Safety Audit</label>
    <listViews>
        <fullName>Health_and_Safety_Status</fullName>
        <columns>NAME</columns>
        <columns>Thing_Code__c</columns>
        <columns>Account__c</columns>
        <columns>H_S_Current_Status__c</columns>
        <columns>Case__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Health_Safety_Audit__c.Health_Safety_Audit</value>
        </filters>
        <label>Health and Safety Status</label>
    </listViews>
    <nameField>
        <displayFormat>HS-{00000}</displayFormat>
        <label>Health &amp; Safety Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health &amp; Safety Audits</pluralLabel>
    <recordTypes>
        <fullName>Health_Safety_Audit</fullName>
        <active>true</active>
        <label>Health &amp; Safety Audit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>